# ADASAI

./: .env.example  README.md  SETUP.md  main.py  requirements.txt
adas_ai_release/: README.md  inference.py  lanenet_today.pth  model.py  offset.py  requirements.txt  train.py  training_log.json
blockchain/: .gitignore  README.md  SETUP.md  setup.bat
blockchain/besu-network/: docker-compose.yml  genesis.json  ibftConfigFile.json
blockchain/besu-network/keys/node1/: key  key.pub
blockchain/besu-network/keys/node2/: key  key.pub
blockchain/besu-network/keys/node3/: key  key.pub
blockchain/besu-network/keys/node4/: key  key.pub
blockchain/blockchain/: .gitignore  hardhat.config.ts  package-lock.json  package.json
blockchain/blockchain/contracts/: ForensicLogger.sol
blockchain/blockchain/frontend/: app.js  config.json  index.html  package-lock.json  package.json  styles.css  tailwind.config.js  vite.config.js
blockchain/blockchain/frontend/src/: App.jsx  index.css
blockchain/blockchain/frontend/src/components/: AllLogs.jsx  ConfidenceChart.jsx  ContractConfig.jsx  LiveEvents.jsx  LogCount.jsx  LogHash.jsx  Navbar.jsx  NetworkBar.jsx  QueryLog.jsx  SystemStatus.jsx  VehicleLogs.jsx  VerifyHash.jsx
blockchain/blockchain/frontend/src/context/: WalletContext.jsx
blockchain/blockchain/frontend/src/lib/: constants.js  contract.js
blockchain/blockchain/scripts/: deploy.js
blockchain/blockchain/test/: ForensicLogger.test.js
blockchain/cpp/: CMakeLists.txt
blockchain/cpp/include/: sha256_hasher.h  zmq_publisher.h
blockchain/cpp/src/: sha256_hasher.cpp  test_sha256.cpp  zmq_pub_demo.cpp  zmq_publisher.cpp
blockchain/handshake/: adas_payload_spec.json
blockchain/python/: auditor.py  load_deployment.py  requirements.txt  vehicle_log.txt  web3_bridge.py  zmq_subscriber.py
vehicle_software/: CMakeLists.txt
vehicle_software/include/: CryptoModule.h  DecisionService.h  ExecutionManager.h  MessageQueue.h  PerceptionService.h  ServiceTypes.h
vehicle_software/src/: CryptoModule.cpp  DecisionService.cpp  ExecutionManager.cpp  PerceptionService.cpp  main.cpp
